# EngiOptiQA

./: .buildinfo  .gitignore  README.md  annealing_solvers.html  genindex.html  index.html  objects.inv  problems.html  py-modindex.html  pyproject.toml  requirements.txt  rod_1d_problems.html  search.html  searchindex.js  variables.html
.doctrees/: annealing_solvers.doctree  environment.pickle  index.doctree  problems.doctree  rod_1d_problems.doctree  variables.doctree
.doctrees/problems/: problems.doctree
.github/workflows/: doc.yml
_sources/: annealing_solvers.rst.txt  index.rst.txt
_sources/problems/: problems.rst.txt
docs/: annealing_solvers.rst  conf.py  index.rst  problems.rst  rod_1d_problems.rst  truss_structure.rst  variables.rst
docs/problems/: problems.rst
engioptiqa/: __init__.py  annealing_solver.py  annealing_solver_dwave.py  base_problem.py  base_problem_amplify.py  base_problem_dwave.py  design_optimization_problem.py  design_optimization_problem_dwave.py  real_number.py  rod_1d.py  structural_analysis_problem.py  structural_analysis_problem_dwave.py
engioptiqa/annealing_solvers/: __init__.py  annealing_solver.py  annealing_solver_amplify.py  annealing_solver_dwave.py
engioptiqa/problems/: __init__.py  problem.py
engioptiqa/solvers/: __init__.py  brute_force_solver.py
engioptiqa/variables/: __init__.py  real_number.py
engioptiqa/vqa_solvers/: qaoa_solver_pennylane.py
examples/powerflow/: powerflow_4bus.py
examples/rod_1d/: design_optimization_sa.py  structural_analysis_sa.py
problems/: problems.html
(+81 files in other folders)
