[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "engioptiqa"
description = "Engineering Optimization with Quantum Annealing"
readme = "README.md"
authors = [
    {name = "Fabian Key", email = "fabian.key@tuwien.ac.at"}
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "amplify[extra]~=1.5",
    "dwave-cloud-client~=0.14",
    "dwave-samplers~=1.7",
    "dwave-system~=1.34",
    "matplot2tikz~=0.5",
    "matplotlib~=3.10",
    "numpy~=2.0",
    "prettytable~=3.17",
    "sympy~=1.14"
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project.urls]
Homepage = "https://github.com/EngiOptiQA/EngiOptiQA"
Documentation = "https://engioptiqa.github.io/EngiOptiQA/"
